--- a/_includes/background.html
+++ b/_includes/background.html
@@ -2,13 +2,12 @@
   <div class="section__title">Background</div>
   <div class="section__content">
     <p>
-      I'm a fifth year student at
-      <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> expecting to graduate in May 2018. Thanks to Northeastern's co-op program, I've had the
-      privilege of completing three wonderful six-month co-ops at
+      Currently, I'm an Engineer at
+      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> working on web projects for our awesome clients. Prior to Upstatement, I recently graduated from
+      <a class="underline-link" href="http://www.ccis.northeastern.edu/" target="_blank">Northeastern University</a> with my bachelor's degree after completing three wonderful six-month co-ops at
       <a class="underline-link" href="https://us.mullenlowe.com/" target="_blank">MullenLowe U.S.</a>,
       <a class="underline-link" href="https://starry.com/" target="_blank">Starry</a>, and
-      <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple Music</a>. After graduating from Northeastern, I'll be joining
-      <a class="underline-link" href="https://www.upstatement.com/" target="_blank">Upstatement</a> as an Engineer.
+      <a class="underline-link" href="https://www.apple.com/music/" target="_blank">Apple Music</a>.
     </p>
 
     <p>As a front-end engineer, I enjoy bridging the gap between engineering and design &mdash; combining my technical knowledge
